<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ConverteActivity">

    <RadioGroup
        android:id="@+id/rdgPergunta01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/em_que_ano_o_homem_pisou_na_lua_pela_primeira_vez"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdb11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1969" />

        <RadioButton
            android:id="@+id/rdb12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1964" />

        <RadioButton
            android:id="@+id/rdb13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1978" />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/rdgPergunta02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/em_que_ano_foi_declarado_o_fim_da_2_guerra_mundial"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdb21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1934" />

        <RadioButton
            android:id="@+id/rdb22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1939" />

        <RadioButton
            android:id="@+id/rdb23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1945" />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/rdgPergunta03"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Quem foi Alfred Hitchcock?"
            android:textAlignment="textStart"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdb31"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Presidente dos EUA" />

        <RadioButton
            android:id="@+id/rdb32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Guitarrista" />

        <RadioButton
            android:id="@+id/rdb33"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Diretor de cinema" />
    </RadioGroup>

    <Button
        android:id="@+id/btnResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textSize="20sp" />

</LinearLayout>